[package]
name = "scrt-wolfpack-quests-v1"
version = "0.1.0"
authors = ["wolfbytes"]
edition = "2021"
description = "Smart Contract for basic quests"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.0.0" }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.0.0" }
secret-toolkit = "0.6.0"
schemars = "0.8.1"
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
serde_json = { package = "serde-json-wasm", version = "0.5.0" }
thiserror = { version = "1.0" }
rand_chacha = { version = "0.3.1", default-features = false }
rand_core = { version =  "0.6.4", default-features = false } 
base64 = "0.12.3"
sha2 = { version = "0.9.1", default-features = false }

# [dev-dependencies]
cosmwasm-schema = "1.0.0"
